[gd_scene load_steps=2 format=3 uid="uid://bh2kwgrfctqny"]

[ext_resource type="Script" path="res://scripts/level_complete.gd" id="1_complete"]

[node name="LevelComplete" type="CanvasLayer"]
layer = 100
script = ExtResource("1_complete")

[node name="BGOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.05, 0.1, 0.95)

[node name="ParticlesContainer" type="Node2D" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 72
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="Stars" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 48
text = "★ ★ ★"
horizontal_alignment = 1

[node name="Stats" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Completed in 1 attempts!"
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ReplayButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(180, 55)
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "↻ PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(180, 55)
layout_mode = 2
focus_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "⌂ MAIN MENU"

[node name="HintLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Click a button to continue"
horizontal_alignment = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonsContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonsContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
